remove gap under hero. fix width of image under hero.

--- a/style.css
+++ b/style.css
@@ -37,7 +37,6 @@ body {
     flex-direction: row;
     justify-content: center;
     background: #1F2937;
-    gap: 50px;
     padding: 100px;
 }
 
@@ -70,7 +69,7 @@ button {
 }
 
 .image {
-    width: 424px;
+    width: 480px;
     height: 220px;
     background: hsl(214deg 7% 46%);
     display: flex;
